fix example paths
Signed-off-by: Ben Holzman <bah@axial.net>

--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
   <head>
     <title>GLitter Blog Example</title>
     <meta charset="utf-8"> 
-    <link rel="stylesheet" type="text/css" href="blog.css">
+    <link rel="stylesheet" type="text/css" href="example/example.css">
     <script src="//rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
     <script src="lib/tween.js"></script>
     <script src="lib/dat.gui.min.js"></script>
@@ -18,9 +18,9 @@
     <script src="GLitter.js"></script>
     <script src="Page.js"></script>
     <script src="Scene.js"></script>
-    <script src="CubePage.js"></script>
-    <script src="SpherePage.js"></script>
-    <script src="blog.js"></script>
+    <script src="example/CubePage.js"></script>
+    <script src="example/SpherePage.js"></script>
+    <script src="example/example.js"></script>
   </head>
   <body>
     <div id="content" class="content">
